kbo프로젝트 수정2

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,31 +23,31 @@
         <nav>
           <a href="#hero" class="active">
             <span class="nav-icon">></span>
-            <span class="nav-text">about</span>
+            <span class="nav-text">소개</span>
           </a>
           <a href="#projects">
             <span class="nav-icon">></span>
-            <span class="nav-text">projects</span>
+            <span class="nav-text">프로젝트</span>
           </a>
           <a href="#skills">
             <span class="nav-icon">></span>
-            <span class="nav-text">skills</span>
+            <span class="nav-text">기술</span>
           </a>
           <a href="#experience">
             <span class="nav-icon">></span>
-            <span class="nav-text">career</span>
+            <span class="nav-text">경력</span>
           </a>
           <a href="#education">
             <span class="nav-icon">></span>
-            <span class="nav-text">education</span>
+            <span class="nav-text">학력</span>
           </a>
           <a href="#certification">
             <span class="nav-icon">></span>
-            <span class="nav-text">certification</span>
+            <span class="nav-text">자격증</span>
           </a>
           <a href="#contact">
             <span class="nav-icon">></span>
-            <span class="nav-text">contact</span>
+            <span class="nav-text">연락처</span>
           </a>
         </nav>
       </aside>
@@ -105,7 +105,7 @@
     </section>
     
     <section id="projects" class="content-section">
-      <h2 class="section-title">Projects</h2>
+      <h2 class="section-title">프로젝트</h2>
       <div class="section-content">
         <div class="projects-grid">
           <article class="project-card" data-href="project-kbo.html">
@@ -189,7 +189,7 @@
   </section>
   
     <section id="skills" class="content-section">
-      <h2 class="section-title">Skills</h2>
+      <h2 class="section-title">기술</h2>
       <div class="section-content">
         <div class="skills-container">
         <div class="skill-group">
@@ -245,7 +245,7 @@
 
 
   <section id="experience" class="content-section">
-    <h2 class="section-title">Experience</h2>
+    <h2 class="section-title">경력</h2>
     <div class="section-content">
       <div class="timeline">
         <div class="timeline-item">
@@ -276,7 +276,7 @@
   </section>
   
   <section id="education" class="content-section">
-    <h2 class="section-title">Education</h2>
+    <h2 class="section-title">학력</h2>
     <div class="section-content">
       <div class="edu-container">
         <div class="edu-item">
@@ -292,7 +292,7 @@
   </section>
   
   <section id="certification" class="content-section">
-    <h2 class="section-title">Certification</h2>
+    <h2 class="section-title">자격증</h2>
     <div class="section-content">
       <div class="cert-section">
         <h4 class="cert-title">자격증</h4>
@@ -305,7 +305,7 @@
   </section>
   
   <section id="contact" class="content-section">
-    <h2 class="section-title">Contact</h2>
+    <h2 class="section-title">연락처</h2>
     <div class="section-content">
       <div class="contact-grid">
         <button type="button" class="contact-card contact-copy" data-copy="lottone27@naver.com" aria-label="이메일 주소 복사">
