KBO 프로젝트 마무리

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
                     </span>
                     <span class="copy-text">lottone27@naver.com</span>
                   </button>
-                  <a href="https://github.com/lotto-one" target="_blank" rel="noreferrer noopener" class="hero-link">
+                  <a href="https://github.com/Lottone27" target="_blank" rel="noreferrer noopener" class="hero-link">
                     <span class="link-icon">
                       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12C2 16.42 4.865 20.17 8.839 21.49C9.339 21.58 9.521 21.27 9.521 21C9.521 20.77 9.511 19.98 9.511 19.15C7 19.61 6.35 18.53 6.15 17.97C6.037 17.68 5.55 16.8 5.125 16.57C4.775 16.4 4.275 15.94 5.115 15.93C5.9 15.92 6.462 16.64 6.65 16.95C7.55 18.43 8.988 18.01 9.562 17.73C9.65 17.08 9.912 16.65 10.2 16.38C7.975 16.11 5.65 15.24 5.65 11.47C5.65 10.46 6.037 9.62 6.675 8.97C6.575 8.7 6.225 7.66 6.775 6.32C6.775 6.32 7.612 6.05 9.525 7.37C10.325 7.13 11.175 7.01 12.025 7.01C12.875 7.01 13.725 7.13 14.525 7.37C16.437 6.04 17.275 6.32 17.275 6.32C17.825 7.66 17.475 8.7 17.375 8.97C18.012 9.62 18.4 10.45 18.4 11.47C18.4 15.25 16.063 16.11 13.838 16.38C14.2 16.7 14.513 17.31 14.513 18.26C14.513 19.6 14.5 20.68 14.5 21C14.5 21.27 14.688 21.59 15.188 21.49C19.138 20.16 22 16.41 22 12C22 6.477 17.523 2 12 2Z" fill="#6B9EFF"/>
@@ -110,14 +110,14 @@
         <div class="projects-grid">
           <article class="project-card" data-href="project-kbo.html">
             <div class="project-body">
-              <h3 class="project-title">KBO 프로젝트</h3>
-              <p class="project-meta">2024.05 ~ 2024.06</p>
-              <p class="project-desc">Python(Django)와 Java(Spring) 기반 서버를 분리하여<br> 멀티 백엔드 구조로 설계
-                </p>
+              <h3 class="project-title">KBO 리그 통합 데이터 플랫폼</h3>
+              <p class="project-meta">2024.05.03 ~ 2024.05.15</p>
+              <p class="project-desc">KBO 핵심 정보를 통합하고 크롤링 자동화를 구현한 플랫폼</p>
               <div class="project-tags">
-                <span class="tag">Java</span>
+                <span class="tag">Python</span>
+                <span class="tag">Django</span>
                 <span class="tag">Spring</span>
-                <span class="tag">Redis</span>
+                <span class="tag">Selenium</span>
               </div>
               <div class="project-links">
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -154,8 +154,7 @@
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <a href="#" class="project-link">GitHub →</a>
-              <a href="#" class="project-link">Demo →</a>
+              <a href="https://github.com/Lottone27/java-project-KBOcrawling" class="project-link" target="_blank" rel="noopener">GitHub →</a>
             </div>
           </div>
           <div class="project-media">
@@ -319,7 +318,7 @@
           <p class="contact-info">lottone27@naver.com</p>
         </button>
         
-        <a href="https://github.com/lotto-one" target="_blank" rel="noreferrer noopener" class="contact-card">
+        <a href="https://github.com/Lottone27" target="_blank" rel="noreferrer noopener" class="contact-card">
           <div class="contact-icon-wrapper">
             <svg class="contact-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12C2 16.42 4.865 20.17 8.839 21.49C9.339 21.58 9.521 21.27 9.521 21C9.521 20.77 9.511 19.98 9.511 19.15C7 19.61 6.35 18.53 6.15 17.97C6.037 17.68 5.55 16.8 5.125 16.57C4.775 16.4 4.275 15.94 5.115 15.93C5.9 15.92 6.462 16.64 6.65 16.95C7.55 18.43 8.988 18.01 9.562 17.73C9.65 17.08 9.912 16.65 10.2 16.38C7.975 16.11 5.65 15.24 5.65 11.47C5.65 10.46 6.037 9.62 6.675 8.97C6.575 8.7 6.225 7.66 6.775 6.32C6.775 6.32 7.612 6.05 9.525 7.37C10.325 7.13 11.175 7.01 12.025 7.01C12.875 7.01 13.725 7.13 14.525 7.37C16.437 6.04 17.275 6.32 17.275 6.32C17.825 7.66 17.475 8.7 17.375 8.97C18.012 9.62 18.4 10.45 18.4 11.47C18.4 15.25 16.063 16.11 13.838 16.38C14.2 16.7 14.513 17.31 14.513 18.26C14.513 19.6 14.5 20.68 14.5 21C14.5 21.27 14.688 21.59 15.188 21.49C19.138 20.16 22 16.41 22 12C22 6.477 17.523 2 12 2Z" fill="#6B9EFF"/>
