--- a/project-personal.html
+++ b/project-personal.html
@@ -62,7 +62,7 @@
                 <p class="hero-kicker">Project</p>
                 <div class="hero-title-row">
                   <h1 class="hero-name">AI 이미지 분석 (마스크 &amp; 퍼스널컬러)</h1>
-                  <span class="hero-period">프로젝트 기간</span>
+                  <span class="hero-period">2024.06.28 ~ 2024.07.18</span>
                 </div>
                 <div class="ppt-slider" data-total="73" tabindex="0" aria-label="AI 이미지 분석 프로젝트 주요 화면 슬라이드">
                   <div class="ppt-viewport">
@@ -122,57 +122,45 @@
               <div class="detail-vertical">
                 <div class="detail-vertical-item">
                   <div class="detail-vertical-header">
-                    <h3>UI/UX 설계 및 프론트 구현</h3>
+                    <h3>UI 총괄 및 디자인 시스템 구축</h3>
                     <div class="detail-inline-stack">
                       <span class="detail-inline-tag">Vue.js</span>
                       <span class="detail-inline-tag">Tailwind CSS</span>
                     </div>
                   </div>
-                  <p>사용자 흐름에 맞춘 화면 설계와 컴포넌트 구조화로 UI 완성도 강화</p>
+                  <p>메인 UI와 대표 디자인을 총괄 설계하고 컴포넌트 기준을 정립</p>
                   <div class="detail-ui-gallery detail-ui-gallery--wide">
                     <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 1 확대 보기">
-                      <img src="./image/personal/ppt/1.jpg" alt="AI 이미지 분석 화면 예시 1">
+                      <img src="./image/personal/front_1.jpg" alt="AI 이미지 분석 화면 예시 1">
                     </button>
                     <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 2 확대 보기">
-                      <img src="./image/personal/ppt/2.jpg" alt="AI 이미지 분석 화면 예시 2">
+                      <img src="./image/personal/front_2.jpg" alt="AI 이미지 분석 화면 예시 2">
                     </button>
                     <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 3 확대 보기">
-                      <img src="./image/personal/ppt/3.jpg" alt="AI 이미지 분석 화면 예시 3">
+                      <img src="./image/personal/front_3.jpg" alt="AI 이미지 분석 화면 예시 3">
                     </button>
                     <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 4 확대 보기">
-                      <img src="./image/personal/ppt/4.jpg" alt="AI 이미지 분석 화면 예시 4">
+                      <img src="./image/personal/front_4.jpg" alt="AI 이미지 분석 화면 예시 4">
                     </button>
                   </div>
                 </div>
                 <div class="detail-vertical-item">
                   <div class="detail-vertical-header">
-                    <h3>API 연동 및 백엔드 협업</h3>
+                    <h3>Q&A·마이페이지 풀스택 구현</h3>
                     <div class="detail-inline-stack">
                       <span class="detail-inline-tag">Spring Boot</span>
                       <span class="detail-inline-tag">REST API</span>
                     </div>
                   </div>
-                  <p>프론트-백엔드 간 데이터 계약을 정의하고 API 연동 흐름을 구현</p>
-                </div>
-                <div class="detail-vertical-item">
-                  <div class="detail-vertical-header">
-                    <h3>AI 데이터 수집 및 전처리</h3>
-                    <div class="detail-inline-stack">
-                      <span class="detail-inline-tag">TensorFlow</span>
-                      <span class="detail-inline-tag">OpenCV</span>
-                    </div>
+                  <p>Q&A 게시판과 마이페이지를 백엔드까지 포함해 전 구간 구현</p>
+                  <div class="detail-ui-gallery">
+                    <button type="button" class="image-zoom-button" aria-label="Q&A 화면 확대 보기">
+                      <img src="./image/personal/qna.jpg" alt="Q&A 화면">
+                    </button>
+                    <button type="button" class="image-zoom-button" aria-label="마이페이지 화면 확대 보기">
+                      <img src="./image/personal/mypage.jpg" alt="마이페이지 화면">
+                    </button>
                   </div>
-                  <p>모델 학습용 이미지 수집과 전처리/증강을 통해 데이터 품질을 확보</p>
-                </div>
-                <div class="detail-vertical-item">
-                  <div class="detail-vertical-header">
-                    <h3>퍼스널 컬러 결과 시각화</h3>
-                    <div class="detail-inline-stack">
-                      <span class="detail-inline-tag">JavaScript</span>
-                      <span class="detail-inline-tag">Vue.js</span>
-                    </div>
-                  </div>
-                  <p>진단 결과와 추천 팔레트를 보기 쉽게 정리한 결과 화면 구성</p>
                 </div>
                 <div class="detail-vertical-item">
                   <div class="detail-vertical-header">
@@ -183,6 +171,29 @@
                     </div>
                   </div>
                   <p>회원 관리 및 인증 흐름을 보조하는 관리자 기능을 추가</p>
+                  <div class="detail-ui-gallery">
+                    <button type="button" class="image-zoom-button" aria-label="관리자 기능 화면 1 확대 보기">
+                      <img src="./image/personal/admin_1.jpg" alt="관리자 기능 화면 1">
+                    </button>
+                    <button type="button" class="image-zoom-button" aria-label="관리자 기능 화면 2 확대 보기">
+                      <img src="./image/personal/admin_2.jpg" alt="관리자 기능 화면 2">
+                    </button>
+                  </div>
+                </div>
+                <div class="detail-vertical-item">
+                  <div class="detail-vertical-header">
+                    <h3>BeautyGAN 모델 연동 및 크로스 통신</h3>
+                    <div class="detail-inline-stack">
+                      <span class="detail-inline-tag">Django</span>
+                      <span class="detail-inline-tag">BeautyGAN</span>
+                    </div>
+                  </div>
+                  <p>오픈소스 모델을 Django 서버에 배치하고 서비스와의 크로스 통신을 구현</p>
+                  <div class="detail-media">
+                    <button type="button" class="image-zoom-button" aria-label="BeautyGAN 결과 이미지 확대 보기">
+                      <img src="./image/personal/beautygan.jpg" alt="BeautyGAN 결과 예시">
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -194,18 +205,14 @@
               <div class="detail-duo">
                 <article class="detail-duo-card">
                   <h3>향후 개선 방향</h3>
-                  <ul class="detail-list">
-                    <li>실시간 웹캠 기반 분석으로 사용성 확장</li>
-                    <li>가상 메이크업 스타일/브랜드 옵션 확대</li>
-                    <li>모델 경량화와 응답 속도 개선</li>
-                  </ul>
+                  <p class="detail-paragraph">모델 추론 지연은 비동기 큐로 처리하고, 캐싱·배치 처리·경량화(ONNX/양자화)를 적용해 응답 시간을 줄이는 방향으로 개선해보고 싶습니다. 결과 저장/비교 기능과 에러 로그 수집을 더해 사용자 경험과 운영 안정성도 함께 높이는 형태로 확장하면 좋겠습니다.</p>
                 </article>
                 <article class="detail-duo-card">
                   <h3>성장 및 배움</h3>
                   <ul class="detail-list">
-                    <li>AI 모델을 웹 서비스에 연결하는 전체 흐름을 경험</li>
-                    <li>프론트-백엔드 통신 구조와 데이터 처리 과정을 이해</li>
-                    <li>이미지 전처리와 결과 시각화의 중요성을 체감</li>
+                    <li>오픈소스 모델을 서비스에 연결하며 배포·연동 흐름을 이해</li>
+                    <li>UI 총괄을 맡으며 사용자 관점의 화면 구성과 일관성 유지 경험</li>
+                    <li>Q&A·마이페이지를 풀스택으로 구현하며 API 설계 감각을 확장</li>
                   </ul>
                 </article>
               </div>
@@ -213,25 +220,33 @@
           </section>
 
           <section id="demo" class="content-section detail-section">
-            <h2 class="section-title section-title--with-hint">
-              프로젝트 시연 영상
-              <span class="section-title-hint">클릭 시 재생</span>
-            </h2>
+            <h2 class="section-title">프로젝트 시연 영상</h2>
             <div class="section-content">
               <div class="detail-duo">
                 <article class="detail-duo-card">
-                  <h3>기능 시연</h3>
+                  <h3 class="detail-card-title detail-card-title--with-hint">
+                    마스크 인식 시연
+                    <span class="detail-card-hint">클릭 시 처음부터 재생</span>
+                  </h3>
                   <div class="detail-media">
-                    <button type="button" class="gif-restart" aria-label="기능 시연 GIF 재생">
-                      <img src="./image/personal/demo.gif" alt="AI 이미지 분석 기능 시연">
+                    <button type="button" class="gif-restart" aria-label="마스크 인식 시연 GIF 재생">
+                      <img src="./image/personal/mask.gif" alt="마스크 인식 여부 시연">
                     </button>
                   </div>
                 </article>
                 <article class="detail-duo-card">
-                  <h3>서비스 시연</h3>
+                  <h3>BeautyGAN 메이크업 시연</h3>
                   <div class="detail-media">
-                    <video controls preload="metadata" poster="./image/personal/ppt/1.jpg" aria-label="AI 이미지 분석 서비스 시연">
-                      <source src="./image/personal/demo.mp4" type="video/mp4">
+                    <video controls preload="metadata" poster="./image/personal/makeup.mp4.png" aria-label="BeautyGAN 메이크업 시연 영상">
+                      <source src="./image/personal/makeup.mp4" type="video/mp4">
+                    </video>
+                  </div>
+                </article>
+                <article class="detail-duo-card">
+                  <h3>전체 서비스 시연</h3>
+                  <div class="detail-media">
+                    <video controls preload="metadata" poster="./image/personal/ppt/1.jpg" aria-label="전체 서비스 시연 영상">
+                      <source src="./image/personal/projectvideo.mp4" type="video/mp4">
                     </video>
                   </div>
                 </article>
