--- a/project-mentoring.html
+++ b/project-mentoring.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI 이미지 분석 프로젝트 상세</title>
+  <title>멘토링 프로젝트 상세</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/portfolio.css">
 </head>
@@ -61,10 +61,10 @@
               <div class="hero-text">
                 <p class="hero-kicker">Project</p>
                 <div class="hero-title-row">
-                  <h1 class="hero-name">AI 이미지 분석 (마스크 &amp; 퍼스널컬러)</h1>
-                  <span class="hero-period">2024.06.28 ~ 2024.07.18</span>
+                  <h1 class="hero-name">멘토링 프로젝트</h1>
+                  <span class="hero-period"></span>
                 </div>
-                <div class="ppt-slider" data-total="73" tabindex="0" aria-label="AI 이미지 분석 프로젝트 주요 화면 슬라이드">
+                <div class="ppt-slider" data-total="0" tabindex="0" aria-label="멘토링 프로젝트 주요 화면 슬라이드">
                   <div class="ppt-viewport">
                     <div class="ppt-track"></div>
                   </div>
@@ -82,32 +82,20 @@
           <section id="overview" class="content-section detail-section">
             <h2 class="section-title">개요</h2>
             <div class="section-content">
-              <p class="detail-paragraph detail-paragraph--compact">마스크 감지·퍼스널 컬러 진단·가상 메이크업을 통합한 AI 뷰티 솔루션으로, 결과 관리와 문의 대응까지 포함해 사용자 흐름을 완성했습니다.</p>
+              <p class="detail-paragraph detail-paragraph--compact">내용 준비중</p>
               <h3 class="detail-subtitle">주요 기능</h3>
               <ol class="detail-steps">
                 <li>
-                  <h3>마스크 감지</h3>
-                  <p>VGG16 기반 모델로 마스크 착용 여부를 자동 인식</p>
+                  <h3>내용 준비중</h3>
+                  <p>내용 준비중</p>
                 </li>
                 <li>
-                  <h3>AI 퍼스널 컬러 진단</h3>
-                  <p>이미지 분석으로 봄/여름/가을/겨울 타입을 분류</p>
+                  <h3>내용 준비중</h3>
+                  <p>내용 준비중</p>
                 </li>
                 <li>
-                  <h3>가상 메이크업 시뮬레이션</h3>
-                  <p>BeautyGAN 기반으로 다양한 메이크업 스타일을 적용</p>
-                </li>
-                <li>
-                  <h3>사용자 관리 및 이력 저장</h3>
-                  <p>Redis 기반 인증과 마이페이지 이력 관리 기능 제공</p>
-                </li>
-                <li>
-                  <h3>Q&amp;A 게시판</h3>
-                  <p>문의 등록/조회로 사용자 소통과 피드백 흐름 지원</p>
-                </li>
-                <li>
-                  <h3>관리자 기능</h3>
-                  <p>회원 관리와 인증 흐름 보조 기능 제공</p>
+                  <h3>내용 준비중</h3>
+                  <p>내용 준비중</p>
                 </li>
               </ol>
             </div>
@@ -116,11 +104,7 @@
           <section id="architecture" class="content-section detail-section">
             <h2 class="section-title">아키텍처</h2>
             <div class="section-content">
-              <div class="detail-media">
-                <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 아키텍처 다이어그램 확대 보기">
-                  <img src="./image/personal/personalArci.svg" alt="AI 이미지 분석 아키텍처 다이어그램" class="architecture-zoom-target">
-                </button>
-              </div>
+              <p class="detail-paragraph detail-paragraph--compact">내용 준비중</p>
             </div>
           </section>
 
@@ -130,78 +114,30 @@
               <div class="detail-vertical">
                 <div class="detail-vertical-item">
                   <div class="detail-vertical-header">
-                    <h3>UI 총괄 및 디자인 시스템 구축</h3>
+                    <h3>내용 준비중</h3>
                     <div class="detail-inline-stack">
-                      <span class="detail-inline-tag">Vue.js</span>
-                      <span class="detail-inline-tag">Tailwind CSS</span>
+                      <span class="detail-inline-tag">내용 준비중</span>
                     </div>
                   </div>
-                  <p>메인 UI와 대표 디자인을 총괄 설계하고 컴포넌트 기준을 정립</p>
-                  <div class="detail-ui-gallery detail-ui-gallery--wide">
-                    <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 1 확대 보기">
-                      <img src="./image/personal/front_1.jpg" alt="AI 이미지 분석 화면 예시 1">
-                    </button>
-                    <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 2 확대 보기">
-                      <img src="./image/personal/front_2.jpg" alt="AI 이미지 분석 화면 예시 2">
-                    </button>
-                    <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 3 확대 보기">
-                      <img src="./image/personal/front_3.jpg" alt="AI 이미지 분석 화면 예시 3">
-                    </button>
-                    <button type="button" class="image-zoom-button" aria-label="AI 이미지 분석 화면 예시 4 확대 보기">
-                      <img src="./image/personal/front_4.jpg" alt="AI 이미지 분석 화면 예시 4">
-                    </button>
-                  </div>
+                  <p>내용 준비중</p>
                 </div>
                 <div class="detail-vertical-item">
                   <div class="detail-vertical-header">
-                    <h3>Q&A·마이페이지 풀스택 구현</h3>
+                    <h3>내용 준비중</h3>
                     <div class="detail-inline-stack">
-                      <span class="detail-inline-tag">Spring Boot</span>
-                      <span class="detail-inline-tag">REST API</span>
+                      <span class="detail-inline-tag">내용 준비중</span>
                     </div>
                   </div>
-                  <p>Q&A 게시판과 마이페이지를 백엔드까지 포함해 전 구간 구현</p>
-                  <div class="detail-ui-gallery">
-                    <button type="button" class="image-zoom-button" aria-label="Q&A 화면 확대 보기">
-                      <img src="./image/personal/qna.jpg" alt="Q&A 화면">
-                    </button>
-                    <button type="button" class="image-zoom-button" aria-label="마이페이지 화면 확대 보기">
-                      <img src="./image/personal/mypage.jpg" alt="마이페이지 화면">
-                    </button>
-                  </div>
+                  <p>내용 준비중</p>
                 </div>
                 <div class="detail-vertical-item">
                   <div class="detail-vertical-header">
-                    <h3>관리자 기능 개발</h3>
+                    <h3>내용 준비중</h3>
                     <div class="detail-inline-stack">
-                      <span class="detail-inline-tag">Spring Boot</span>
-                      <span class="detail-inline-tag">Redis</span>
+                      <span class="detail-inline-tag">내용 준비중</span>
                     </div>
                   </div>
-                  <p>회원 관리 및 인증 흐름을 보조하는 관리자 기능을 추가</p>
-                  <div class="detail-ui-gallery">
-                    <button type="button" class="image-zoom-button" aria-label="관리자 기능 화면 1 확대 보기">
-                      <img src="./image/personal/admin_1.jpg" alt="관리자 기능 화면 1">
-                    </button>
-                    <button type="button" class="image-zoom-button" aria-label="관리자 기능 화면 2 확대 보기">
-                      <img src="./image/personal/admin_2.jpg" alt="관리자 기능 화면 2">
-                    </button>
-                  </div>
-                </div>
-                <div class="detail-vertical-item">
-                  <div class="detail-vertical-header">
-                    <h3>BeautyGAN 모델 연동 및 크로스 통신</h3>
-                    <div class="detail-inline-stack">
-                      <span class="detail-inline-tag">Django</span>
-                      <span class="detail-inline-tag">BeautyGAN</span>
-                    </div>
-                  </div>
-                  <p>오픈소스 모델을 Django 서버에 배치하고 서비스와의 크로스 통신을 구현</p>
-                  <div class="detail-media">
-                    <button type="button" class="image-zoom-button" aria-label="BeautyGAN 결과 이미지 확대 보기">
-                      <img src="./image/personal/beautygan.jpg" alt="BeautyGAN 결과 예시">
-                    </button>
-                  </div>
+                  <p>내용 준비중</p>
                 </div>
               </div>
             </div>
@@ -213,11 +149,11 @@
               <div class="detail-duo">
                 <article class="detail-duo-card">
                   <h3>향후 개선 방향</h3>
-                  <p class="detail-paragraph detail-paragraph--compact">이미지 분석 시간이 길어질 때는 요청을 순서대로 처리하는 대기열을 두고, 분석 전 이미지 크기를 줄여 부담을 낮추는 방식으로 응답을 빠르게 하고 싶습니다. 또한 마이페이지에서 같은 사진/조건으로 조회한 결과는 저장해 두었다가 바로 보여주는 방식으로 개선해보고 싶습니다. 마지막으로 Q&A와 마이페이지는 검색·필터와 알림, 히스토리 확인을 보강해 필요한 정보를 더 쉽게 찾도록 개선해보고 싶습니다.</p>
+                  <p class="detail-paragraph detail-paragraph--compact">내용 준비중</p>
                 </article>
                 <article class="detail-duo-card">
                   <h3>성장 및 배움</h3>
-                  <p class="detail-paragraph detail-paragraph--compact">오픈소스 모델을 서비스에 연결해 배포와 연동 흐름을 직접 경험했고, UI 총괄을 맡아 화면 구조와 디자인 기준을 잡으면서 사용자 관점에서 일관성을 유지하는 법을 배웠습니다. Q&A·마이페이지는 백엔드까지 포함해 구현하고 관리자 기능도 보조하면서, API 설계와 기능 운영의 감각을 함께 넓힐 수 있었습니다.</p>
+                  <p class="detail-paragraph detail-paragraph--compact">내용 준비중</p>
                 </article>
               </div>
             </div>
@@ -229,29 +165,23 @@
               <div class="detail-duo">
                 <article class="detail-duo-card">
                   <h3 class="detail-card-title detail-card-title--with-hint">
-                    마스크 인식 시연
-                    <span class="detail-card-hint">클릭 시 처음부터 재생</span>
+                    내용 준비중
+                    <span class="detail-card-hint">내용 준비중</span>
                   </h3>
                   <div class="detail-media">
-                    <button type="button" class="gif-restart" aria-label="마스크 인식 시연 GIF 재생">
-                      <img src="./image/personal/mask.gif" alt="마스크 인식 여부 시연">
-                    </button>
+                    <p class="detail-paragraph detail-paragraph--compact">내용 준비중</p>
                   </div>
                 </article>
                 <article class="detail-duo-card">
-                  <h3>BeautyGAN 메이크업 시연</h3>
+                  <h3>내용 준비중</h3>
                   <div class="detail-media">
-                    <video controls preload="metadata" poster="./image/personal/makeup.mp4.png" aria-label="BeautyGAN 메이크업 시연 영상">
-                      <source src="./image/personal/makeup.mp4" type="video/mp4">
-                    </video>
+                    <p class="detail-paragraph detail-paragraph--compact">내용 준비중</p>
                   </div>
                 </article>
                 <article class="detail-duo-card">
-                  <h3>전체 서비스 시연</h3>
+                  <h3>내용 준비중</h3>
                   <div class="detail-media">
-                    <video controls preload="metadata" poster="./image/personal/ppt/1.jpg" aria-label="전체 서비스 시연 영상">
-                      <source src="./image/personal/projectvideo.mp4" type="video/mp4">
-                    </video>
+                    <p class="detail-paragraph detail-paragraph--compact">내용 준비중</p>
                   </div>
                 </article>
               </div>
@@ -289,8 +219,8 @@
         const slide = document.createElement('div');
         slide.className = 'ppt-slide';
         const img = document.createElement('img');
-        img.src = `./image/personal/ppt/${index}.jpg`;
-        img.alt = `AI 이미지 분석 프로젝트 화면 ${index}`;
+        img.src = `./image/mentoring/ppt/${index}.jpg`;
+        img.alt = `멘토링 프로젝트 화면 ${index}`;
         img.loading = 'lazy';
         slide.appendChild(img);
         return slide;
